assets/css/docs.css
body {
	position: relative;
}

footer {
	padding-bottom: 70px
}

.sidebar .affix {
	position: static;
}

@media (min-width: 992px) {
	.sidebar .affix {
		position: fixed;
		top: 20px;
		width: 213px;
	}
}

@media (min-width: 1200px) {
	.sidebar .affix {
		width: 263px;
	}
}

pre {
    overflow-x: auto;
}

pre code {
    overflow-wrap: normal;
    white-space: pre;
}

